# climbing-app-backend

./: .gitignore  CHANGELOG.md  Dockerfile  main.py  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 246635576a0f_add_archived_field_to_route_model.py  4ef06e4a3d65_remove_excess_author_field_and_rename_.py  50d89f477169_add_sqlmodel_models.py  5473a80fe510_add_accessrefreshtoken_table.py  75de8a0aafde_add_competition_and_participant_tables.py  8a70bb7f92fb_add_ondelete_cascade_in_acess_token_.py  8b0320481e60_add_created_at_column_to_route_table.py  8d3f23d9f4db_add_unique_constraint_to_username.py  98124b2b5559_set_nullability_for_all_columns.py  9efd031f2336_add_refreshtoken_table.py  a30dccf9af29_change_user_s_creation_date_column_name_.py  ba76770fca9a_initial_sqlmodel_database.py  d931930fbfbe_add_on_delete_cascade_to_oauthaccount_.py  daaeb9e25b46_change_id_columns_types_to_uuidtype.py  ed41c5a8c681_add_is_student_column_to_user_table.py  ede4ba9c2dfe_remove_accesstoken_and_refreshtoken_.py  ef54dbb20760_add_sex_field_to_user.py  f153654b3266_add_ascents_table.py
api/api_v1/endpoints/: auth.py  users.py
climbing/: main.py  requirements.txt  temp.py
climbing/alembic/: env.py
climbing/alembic/versions/: 32eb557c8018_add_accesstoken_table.py  8ab8aaacbb9b_first_test_revision.py  983e38b839f9_add_oauthaccount_table.py
climbing/api/: deps.py
climbing/api/api_v1/: api.py
climbing/api/api_v1/endpoints/: ascents.py  auth.py  competition.py  rating.py  routes.py  users.py
climbing/api/api_v2/: __init__.py
climbing/api/api_v2/endpoints/: rating.py
climbing/core/: category_to_score_map.py  config.py  public.pem.pub  responses.py  score_maps.py  security.py  user_manager.py
climbing/core/refresh_token/: backend.py  strategy.py  transport.py
climbing/core/refresh_token/db/: adapter.py  database.py  models.py  strategy.py
climbing/crud/: __init__.py  base.py  crud_ascent.py  crud_competition.py  crud_competition_participant.py  crud_route.py  crud_user.py
climbing/db/: base.py  base_class.py  session.py  user_database.py
climbing/db/models/: __init__.py  ascent.py  competition.py  competition_participant.py  feeling.py  route.py  route_image.py  user.py
climbing/features/route/: __init__.py  crud.py
climbing/models/: __init__.py  file.py  route.py  route_image.py  user.py
climbing/schemas/: __init__.py  ascent.py  base_read_classes.py  category.py  category_to_score.py  competition.py  competition_participant.py  expiring_ascent.py  file.py  image.py  rating_filter.py  result.py  route.py  score.py  user.py  user_and_route_base_read_classes.py
climbing/schemas/filters/: ascents_filter.py  order_enum.py  routes_filter.py
climbing/util/: __init__.py  extended_enum.py  rating_calculator.py
core/: config.py
crud/: base.py  crud_user.py
db/: base.py
features/route/: path.py
features/route/model/: __init__.py
models/: route.py
schemas/: multipart_form_data_compatible_model.py  route.py
