[tool.poetry]
name = "climbing"
version = "0.1.0"
description = ""
authors = ["Alexandr Makurin <ae_mc@mail.ru>"]
license = "MIT"

[tool.poetry.dependencies]
aiosqlite = "^0.17.0"
alembic = "^1.7.5"
pydantic = "^1.9.0"
fastapi = "^0.71.0"
fastapi-users = {extras = ["oauth"], version = "^9.2.2"}
python = "^3.10"
# Start of neovim dependencies
pynvim = {version = "^0.4.3", optional = true}
pyright = {version = "^0.0.13", optional = true}
# End of neovim dependencies
SQLAlchemy = "^1.4.31"
fastapi-users-db-sqlmodel = "^0.1.1"
python-dateutil = "^2.8.2"
sqlmodel = "^0.0.8"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
mypy = "^0.931"
pycodestyle = "^2.8.0"
pylint = "^2.12.2"
pytest = "^5.2"
uvicorn = "^0.17.0"
commitizen = "^2.20.4"

[tool.poetry.extras]
neovim = ["pynvim", "pyright"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.1.1"
tag_format = "$version"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
