[tool.poetry]
name = "climbing"
version = "1.2.0"
description = ""
authors = ["Alexandr Makurin <ae_mc@mail.ru>"]
license = "MIT"

[tool.poetry.dependencies]
aiosqlite = "^0.17.0"
alembic = "^1.7.5"
pydantic = "^2.6.1"
pydantic-settings = "^2.2.0"
fastapi = "^0.109.2"
fastapi-users = {extras = ["oauth"], version = "^12.1.3"}
fastapi-users-db-sqlmodel = { git = "https://github.com/Ae-Mc/fastapi-users-db-sqlmodel" }
python = "^3.10"
python-multipart = "^0.0.7"
SQLAlchemy = "^2.0.0"
python-dateutil = "^2.8.2"
sqlmodel = "^0.0.16"
pyyaml = "^6.0.1"
setuptools = "^68.1.0"
xlsxwriter = "^3.1.9"

[tool.poetry.extras]
neovim = ["pynvim", "pyright"]

[tool.poetry.group.dev.dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
mypy = "^0.931"
pycodestyle = "^2.8.0"
pylint = "^2.12.2"
uvicorn = "^0.17.0"
commitizen = "^2.20.4"
pylint-pydantic = "^0.2.4"
pylint-sqlalchemy = "^0.3.0"
# Start of neovim dependencies
pynvim = {version = "^0.4.3", optional = true}
pyright = {version = "^0.0.13", optional = true}
# End of neovim dependencies

[tool.commitizen]
name = "cz_conventional_commits"
version = "2.0.1"
tag_format = "$version"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
